fix a bug with sub nav on mobile clicking on subnav item does nothing

--- a/source/_sass/_subnav.scss
+++ b/source/_sass/_subnav.scss
@@ -48,7 +48,8 @@
 
       button.sub-nav-trigger{      
        // border:1px solid goldenrod; 
-        //display:none;         
+        //display:none; 
+        height:80px;        
       }
 
       >.main-nav-items {
