--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -758,17 +758,20 @@ section.dctsdk-work-flow {
     }
   }
 
+  #home-menu{
+    margin-top:3.375rem;
+  }
   .work-flow_menu ul li {
     color: $grey;
     cursor: pointer;
     font-size: 1.1875rem;
    // margin-bottom: 1.875rem;
    //GN-c margin-bottom: 0.625rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 3.85rem;
     width:290px;
     @media screen and (min-width: 768px) {
    //GN-c margin-bottom: 0.625rem;
-    margin-bottom: 2.625rem;
+    margin-bottom: 2.4rem;
     }
   }
 
@@ -784,7 +787,8 @@ section.dctsdk-work-flow {
   .work-flow_menu ul li .shadow-box.dctsdk {
     margin: -1.375rem 0 0;
     @media screen and (min-width: 768px) {
-      padding: 1.25rem 2rem;
+      //#GN-c padding: 1.25rem 2rem;
+      padding:0.8125rem 1rem;
     }
   }
 
@@ -792,8 +796,8 @@ section.dctsdk-work-flow {
     @media screen and (min-width: 768px) {
       background: $white;
       box-shadow: 0 3px 16px #46303029;
-      border-radius: 6px;
-      padding: 1.25rem 2rem;
+      //#GN-c padding: 1.25rem 2rem;
+      padding:0.8125rem 1rem;
     }
   }
 
